# glyph

./: ML_SERVICE_PROMPT.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_users.sql  002_books.sql  003_tags.sql  004_reviews.sql  005_questions.sql  006_images.sql  007_reading_status.sql  008_ai_answers.sql
backend/src/: config.rs  errors.rs  main.rs
backend/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/handlers/: ai_answers.rs  answers.rs  books.rs  images.rs  mod.rs  questions.rs  reading_status.rs  reviews.rs  tags.rs  users.rs
backend/src/models/: ai_answer.rs  answer.rs  book.rs  image.rs  mod.rs  question.rs  reading_status.rs  review.rs  tag.rs  user.rs
backend/src/services/: ai_answer.rs  answer.rs  book.rs  mod.rs  question.rs  reading_status.rs  review.rs  tag.rs  user.rs
backend/src/validation/: mod.rs
docs/architecture/: current-state.md  target-state.md
docs/ml/: approach.md  implementation-plan.md  implementation-results.md
docs/plan/: timeline.md
frontend/: BOOK_DETAILS_PRD.md  PROFILE_SETTINGS_PRD.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue
ml/: .env.example  .gitignore  Dockerfile  requirements-ml.txt  requirements.txt
ml/data/: retrieval_cache.json
ml/models/: experiment_results_instruct.jsonl
ml/notebooks/: 01_eda.ipynb  02_training.ipynb  03_evaluation.ipynb  eval_kaggle.ipynb  generate_synthetic_colab.ipynb  glyph_eval_colab.ipynb  (+2 more)
(+127 files in other folders)
